objects/Private_Key__c/Private_Key__c.object-meta.xml
<CustomObject>
    <description>Private Key</description>
    <label>Private Key</label>
    <nameField>
        <displayFormat>PK-{000000}</displayFormat>
        <label>PK Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>