objects/Private_Key__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>Feature to Support Encrypted Information</description>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TestClassKey</fullName>
            </value>
            <value>
                <fullName>UserVoiceIntegrationKey</fullName>
            </value>
            <value>
                <fullName>ServiceNowIntegrationKey</fullName>
            </value>
            <value>
                <fullName>TestClass</fullName>
                <isActive>false</isActive>
                <label>TestClass</label>
            </value>
            <value>
                <fullName>UserVoiceIntegration</fullName>
                <isActive>false</isActive>
                <label>UserVoiceIntegration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>