objects/Private_Key__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>IsActive Flag</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>